# github-analyzer-agent

./: .gitignore  README.md  analyzer.py  app.py  llm.py  prompts.py  pyproject.toml  repo_parser.py  test_run.py
advancements/: dispatcher.py  logger.py  planner.py  registry.py  state.py
advancements/tests/: test_analyzer.py  test_analyzer_error.py  test_context_validator.py  test_dispatcher.py  test_planner.py  test_registry.py  test_state.py
tools/: bugs.py  context_builder.py  context_validator.py  readme.py  repo_context.py  review.py
