[project]
name = "github-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.50",
    "gradio>=6.19.0",
    "gradio-client>=2.5.0",
    "ollama>=0.6.2",
    "pytest>=9.1.1",
    "transformers>=5.12.1",
]
